# BetterVision

./: CMakeLists.txt
Core/DataHolder/headers/: RangedQueue.h  RingBuffer.h
Core/SpecificVals/: RangedValue.h
Interfaces/Codecs/: ICodec.h
Interfaces/DataHolder/: IDataHolder.h
Interfaces/FIleManagement/: IFileManager.h  IFileReader.h  IFileWriter.h
Interfaces/Plugins/: IPlugin.h
Interfaces/Sensors/: ICameraOutPut.h
Interfaces/Transmission/Observers/: IObsListner.h  IObsSender.h
